fix title alignment and ordered lists at post.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -360,9 +360,18 @@ make sure this only happens on large viewports / desktop-ish devices.
   @apply text-xl font-sans font-normal leading-6;
 }
 
+.gh-canvas > ol {
+  @apply list-decimal leading-6;
+}
+
+.gh-canvas > ol li {
+  @apply mt-4 leading-6 pl-1.5;
+}
+
 .gh-canvas > ul {
   @apply list-disc leading-6;
 }
+
 .gh-canvas > ul li {
   @apply mt-4 leading-6 pl-1.5;
 }
